--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1224,17 +1224,20 @@ body {
   display: flex;
   gap: 1px;
   flex: 1;
+  min-width: 0; /* Allow flex shrink */
 }
 
 .lcd-column {
   display: flex;
   flex-direction: column;
   gap: 1px;
+  flex: 1;
+  min-width: 0;
 }
 
 .lcd-pixel {
-  width: 5px;
-  height: 5px;
+  width: 100%;
+  height: 4px;
   border-radius: 1px;
   background: #2a2928;
   box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.3);
